# miguel-vila.github.io

./: .gitignore  .gitmodules  CNAME  about.html  archive.html  circle.yml  drafts.html  feed.xml  gifts-guide.html  gifts-guide.md  index.html  keybase.txt  miguel-vila-github-io.cabal  pgp.txt  robots.txt  shared-drafts.html  side-projects.html  side-projects.md  site.hs  stack.yaml
_site/: archive.html  drafts.html  feed.xml  index.html
assets/: style.css
blog/: atom.xml
build-scripts/: build-puml-images.sh
code/: elm-adv-8.js  elm-conway.js  homomorphism.hs
css/: haskellmn.css  markdown.css  style.css  style.scss  theprofessional.css
drafts/: 2016-03-04-entendiendo-haxl-0.html  2016-03-04-entendiendo-haxl-0.markdown  2016-03-09-construyendo-un-pequenio-lenguaje-0.html  2016-03-09-construyendo-un-pequenio-lenguaje-0.md  2016-03-15-construyendo-un-pequeno-lenguaje-1.html  2016-03-15-construyendo-un-pequeno-lenguaje-1.md  2016-03-19-construyendo-un-pequeno-lenguaje-2.html  2016-03-19-construyendo-un-pequeno-lenguaje-2.md  2016-05-16-futuros-y-promesas.html  2016-05-16-futuros-y-promesas.md  2016-05-26-cicla.html  2016-05-26-cicla.md  2016-06-08-podcasts.md  2016-06-08-podcasts.md~  2016-06-10-funciones.md  2016-06-10-funciones.md~  2016-10-28-adts-y-subtipos.md  2016-11-12-parseando-con-funciones.md  2016-11-22-sobre-sistemas-de-tipos.md  2016-11-26-radicalizacion.md  2016-11-27-dp-with-fp.md  2016-12-24-algunas-cosas-para-el-2017.md  2017-01-10-conways-gol-in-elm.md  2017-05-01-monadas-libres-mas-que-testing.md  2017-09-14-la-funcion-minima-tal-que.md  2020-11-22-design-docs.md  2020-12-05-aoc-rust-1.md  2020-12-14-scala-mas-estricto.md  (+5 more)
(+151 files in other folders)
