name:                miguel-vila-github-io
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  ghc-options:         -threaded
  build-depends:       base >= 4.5 && < 5 ,
                       hakyll >= 4.6 && < 4.7.5,
                       hslua == 0.4.0
  default-language:    Haskell2010