name:                miguel-vila-github-io
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  ghc-options:         -threaded
  build-depends:       base >= 4.5 && < 5 ,
                       hakyll >= 4.6 && < 4.7.5,
                       time == 1.5.0.1,
                       pandoc == 1.15.2.1,
                       pandoc-types == 1.12.4.5,
                       hslua == 0.4.1,
                       containers == 0.5.6.2
  default-language:    Haskell2010