name:                miguel-vila-github-io
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  ghc-options:         -threaded
  build-depends:       base >= 4.5 && < 5 ,
                       hakyll >= 4.15.1.1,
                       time >= 1.9.3,
                       pandoc >= 2.17.1.1,
                       pandoc-types >= 1.22.2.1,
                       hslua >= 2.1.0,
                       containers >= 0.6.4.1
  default-language:    Haskell2010
